src/pages/home/Sections/OfferedAssistance/style.css
[data-aos="SlideFromAbove"] {
  transform: translateY(-40%);
  transform: translateY(-50%);
  opacity: 1;
  visibility: visible;
  transition-property: transform, opacity;
}

[data-aos="SlideFromAbove"].aos-animate {
  transform: translate(0);
  opacity: 1;
}

[data-aos="showElement"] {
  transform: translateY(-20%);
  height: 0;
  opacity: 0;
  transition-property: transform, opacity;
}

[data-aos="showElement"].aos-animate {
  height: auto;
  height: fit-content;
  transform: translate(0);
  visibility: visible;
  opacity: 1;
}

body[data-aos="justifyFix"] {
  justify-content: start;
  transition-property: justify-content;
}

[data-aos="justifyFix"].aos-animate {
  justify-content: center;
}

@media screen and (min-width: 478px) {
  [data-aos="SlideFromAbove"] {
    transform: translateY(-30%);
  }

  [data-aos="showElement"] {
    transform: translateY(-20%);
  }
}

@media screen and (min-width: 568px) {
  [data-aos="SlideFromAbove"] {
    transform: translateY(-30%);
  }

  [data-aos="showElement"] {
    transform: translateY(-20%);
  }
}

@media screen and (min-width: 991px) {
  [data-aos="SlideFromAbove"] {
    transform: translateY(-20%);
  }

  [data-aos="showElement"] {
    transform: translateY(-20%);
  }
}

